mobile menu added. Header and Footer code refactor

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="GNSS Metrics is a comprehensive repository designed for evaluating the accuracy and precision of GNSS (Global Navigation Satellite System) receivers"
+      content="gnssmetrics.com is a web application designed to provide comprehensive accuracy and precision metrics and analysis for GNSS (Global Navigation Satellite System) static position fix testing"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
